--- a/intro/index.html
+++ b/intro/index.html
@@ -4,16 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+  
+  <ul id="result-list">
 
-  <div class="container">
-    <div class="row">
-  
-    </div>
-  </div>
-  
+  </ul>
+
   <script src="./js/script.js"></script>
 </body>
 </html>
