--- a/numbers-ks/index.html
+++ b/numbers-ks/index.html
@@ -4,13 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+
+  <div class="container">
+    <div class="row">
   
-  <ul id="result-list">
-
-  </ul>
-
+    </div>
+  </div>
+  
   <script src="./js/script.js"></script>
 </body>
 </html>
